[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"

[[bin]]
name = "contract"
path = "src/contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "proxycontract"
path = "src/proxycontract.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

